syntax = "proto3";
package virtengine.deployment.v1beta4;

import "gogoproto/gogo.proto";

import "virtengine/deployment/v1/deployment.proto";
import "virtengine/deployment/v1beta4/groupspec.proto";
import "virtengine/base/deposit/v1/deposit.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/deployment/v1beta4";

// MsgCreateDeployment defines an SDK message for creating deployment.
message MsgCreateDeployment {
  option (gogoproto.equal)      = false;

  // ID is the unique identifier of the deployment.
  virtengine.deployment.v1.DeploymentID id = 1 [
    (gogoproto.nullable)   = false,
    (gogoproto.customname) = "ID",
    (gogoproto.jsontag)    = "id",
    (gogoproto.moretags)   = "yaml:\"id\""
  ];

  // GroupSpec is a list of group specifications for the deployment.
  // This field is required and must be a list of GroupSpec.
  repeated GroupSpec groups = 2 [
    (gogoproto.nullable)     = false,
    (gogoproto.castrepeated) = "GroupSpecs",
    (gogoproto.jsontag)      = "groups",
    (gogoproto.moretags)     = "yaml:\"groups\""
  ];

  // Hash of the deployment.
  bytes hash = 3 [
    (gogoproto.jsontag)  = "hash",
    (gogoproto.moretags) = "yaml:\"hash\""
  ];

  // Deposit specifies the amount of coins to include in the deployment's first deposit.
  virtengine.base.deposit.v1.Deposit deposit = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "deposit",
    (gogoproto.moretags) = "yaml:\"deposit\""
  ];
}

// MsgCreateDeploymentResponse defines the Msg/CreateDeployment response type.
message MsgCreateDeploymentResponse {}

// MsgUpdateDeployment defines an SDK message for updating deployment.
message MsgUpdateDeployment {
  option (gogoproto.equal)      = false;

  // ID is the unique identifier of the deployment.
  virtengine.deployment.v1.DeploymentID id = 1 [
    (gogoproto.nullable)   = false,
    (gogoproto.customname) = "ID",
    (gogoproto.jsontag)    = "id",
    (gogoproto.moretags)   = "yaml:\"id\""
  ];

  // Hash of the deployment.
  bytes hash = 3 [
    (gogoproto.jsontag)  = "hash",
    (gogoproto.moretags) = "yaml:\"hash\""
  ];
}

// MsgUpdateDeploymentResponse defines the Msg/UpdateDeployment response type.
message MsgUpdateDeploymentResponse {}

// MsgCloseDeployment defines an SDK message for closing deployment
message MsgCloseDeployment {
  option (gogoproto.equal)      = false;

  // ID is the unique identifier of the deployment.
  virtengine.deployment.v1.DeploymentID id = 1 [
    (gogoproto.nullable)   = false,
    (gogoproto.customname) = "ID",
    (gogoproto.jsontag)    = "id",
    (gogoproto.moretags)   = "yaml:\"id\""
  ];
}

// MsgCloseDeploymentResponse defines the Msg/CloseDeployment response type.
message MsgCloseDeploymentResponse {}
