syntax = "proto3";
package virtengine.deployment.v1beta4;

import "virtengine/deployment/v1beta4/deploymentmsg.proto";
import "virtengine/deployment/v1beta4/groupmsg.proto";
import "virtengine/deployment/v1beta4/paramsmsg.proto";

import "cosmos/msg/v1/msg.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/deployment/v1beta4";

// Msg defines the x/deployment Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // CreateDeployment defines a method to create new deployment given proper inputs.
  rpc CreateDeployment(MsgCreateDeployment) returns (MsgCreateDeploymentResponse);

  // UpdateDeployment defines a method to update a deployment given proper inputs.
  rpc UpdateDeployment(MsgUpdateDeployment) returns (MsgUpdateDeploymentResponse);

  // CloseDeployment defines a method to close a deployment given proper inputs.
  rpc CloseDeployment(MsgCloseDeployment) returns (MsgCloseDeploymentResponse);

  // CloseGroup defines a method to close a group of a deployment given proper inputs.
  rpc CloseGroup(MsgCloseGroup) returns (MsgCloseGroupResponse);

  // PauseGroup defines a method to pause a group of a deployment given proper inputs.
  rpc PauseGroup(MsgPauseGroup) returns (MsgPauseGroupResponse);

  // StartGroup defines a method to start a group of a deployment given proper inputs.
  rpc StartGroup(MsgStartGroup) returns (MsgStartGroupResponse);

  // UpdateParams defines a governance operation for updating the x/deployment module
  // parameters. The authority is hard-coded to the x/gov module account.
  //
  // Since: akash v1.0.0
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}
